Additional spacing fixes

--- a/draft-packages/guidance-block/KaizenDraft/GuidanceBlock/GuidanceBlock.scss
+++ b/draft-packages/guidance-block/KaizenDraft/GuidanceBlock/GuidanceBlock.scss
@@ -66,7 +66,6 @@ $ca-banner-collapse-height-delayed: margin-top $kz-var-animation-duration-fast
   margin: ($kz-var-spacing-sm) 0;
   text-align: center;
   max-width: 780px;
-  box-sizing: border-box;
 
   @include ca-media-desktop {
     padding-left: $kz-var-spacing-sm;
@@ -79,8 +78,8 @@ $ca-banner-collapse-height-delayed: margin-top $kz-var-animation-duration-fast
   flex: 1 0 auto;
   justify-content: center;
   flex-direction: row-reverse;
-
   width: 100%;
+  min-width: max-content;
 
   @include ca-media-tablet-and-up {
     width: auto;
@@ -91,10 +90,6 @@ $ca-banner-collapse-height-delayed: margin-top $kz-var-animation-duration-fast
   @include ca-media-desktop {
     margin-top: 0;
   }
-}
-
-.secondaryAction {
-  margin-right: $kz-var-spacing-md;
 }
 
 .hidden {
